# poetry-truststore

./: README.md  pyproject.toml
poetry_truststore/: plugin.py
